--- a/mklite_frontend/app/Register/RegisterPage.module.css
+++ b/mklite_frontend/app/Register/RegisterPage.module.css
@@ -5,24 +5,23 @@
 }
 
 .leftSide {
-  width: 100%;
-  max-width: 50%;
+  flex: 1;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   padding: 2rem;
-  background-color: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(5px);
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(10px);
 }
+
 
 .formWrapper {
   width: 100%;
-  max-width: 700rem;
+  max-width: 450px;
   padding: 2rem;
-  background-color: white;
+  background: white;
   border-radius: 1rem;
-  box-shadow: 0 35px 25px rgba(0, 0, 0, 0.2);
-  border: 1px solid #0a0a0a;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .input {
@@ -61,6 +60,7 @@
 }
 
 .rightSide {
+  flex: 1;
   display: none;
 }
 
