--- a/mklite_frontend/app/login/LoginPage.module.css
+++ b/mklite_frontend/app/login/LoginPage.module.css
@@ -56,6 +56,7 @@
   border-radius: 0.5rem;
   font-weight: bold;
   transition: 0.3s;
+  margin-top: 1.5rem;
 }
 
 .button:hover {
@@ -68,3 +69,4 @@
   text-align: center;
   margin-bottom: 0.5rem;
 }
+
